<resources>
    <string name="app_name">菜鸟钱包</string>
    <string name="finger_des" translatable="false">免密支付介绍 \n\n
免密支付将你的钱包密码通过安全加密算法存储至手机设备的 Keychain/ Keystore中，交易时调用生物识别
（指纹或面容）鉴权，快速完成支付与签名。\n

开启免密支付后，请妥善备份密码。如果忘记密码，可以通过导入助记词/私钥，重新设置密码。 \n \n \n

风险提示\n\n
请了解你的手机设备生物识别的安全等级\n
大额资产，请勿开启免密支付\n
公共手机，请勿开启免密支付\n\n\n
免责声明\n\n
手机厂商的生物识别技术安全等级各有差异，我们提醒用户谨慎使用该便捷功能。使用过程中出现任何生物识别技术漏洞引发的资产风险，本软件不承担法律责任。</string>
    <string name="dapp_impower_msg">%s 正在申请访问你的钱包地址，你确认将钱包地址公开给此网站吗？</string>
    <string name="gas_info" translatable="false">Gas Price（%s GWEI）*Gas（%s）</string>
    <string name="wallet">钱包</string>
    <string name="styy">生态应用</string>
    <string name="db">生态应用</string>
    <string name="ssdz">搜索或输入 DApp 地址</string>
    <string name="zj">最近</string>
    <string name="sc">收藏</string>
    <string name="tj">推荐</string>
    <string name="ll">浏览</string>
    <string name="me">我</string>
    <string name="qbgl">钱包管理</string>
    <string name="wlgl">网络管理</string>
    <string name="yys">应用锁</string>
    <string name="fxapp">分享App</string>
    <string name="dzb">地址薄</string>
    <string name="sysz">设置</string>
    <string name="ts">探索</string>
    <string name="bzfk">使用说明</string>
    <string name="qbzn">建议与反馈</string>
    <string name="yhxy">用户协议</string>
    <string name="gywm">关于我们</string>
    <string name="aqtx">安全提醒</string>
    <string name="sm1">你的身份助记词未备份，请务必备份助记词</string>
    <string name="sm2">助记词可以用于恢复身份下钱包资产，防止忘记密码、应用删除手机丢失等情况导致资产损失。</string>
    <string name="appversion">版本更新</string>
    <string name="website">官网</string>
    <string name="ltwebsite">论坛</string>
    <string name="login_morechainwallet">多链数字钱包</string>
    <string name="login_importwallet">导入</string>
    <string name="login_creatwallet">创建</string>
    <string name="dapp_tip">本服务由%s提供，您在该链接的所有行为，直接由该链接单独承担。请勿访问来源不明的第三方链接，避免造成资产损失。</string>
    <string name="import_yield_save_wallet">导入已有钱包</string>
    <string name="sy">私钥</string>
    <string name="import_sy_tip">通过输入明文私钥导入</string>
    <string name="zjc">助记词</string>
    <string name="import_zjc_tip">通过输入助记词导入</string>
    <string name="import_account">导入钱包</string>
    <string name="zz">转账</string>
    <string name="fsdd">发送地址：</string>
    <string name="zzsl">转账数量</string>
    <string name="ye">余额：</string>
    <string name="jsdd">接收地址</string>
    <string name="kgf">旷工费</string>
    <string name="zdy">自定义</string>
    <string name="hm">缓慢</string>
    <string name="ks">快速</string>
    <string name="hk">很快</string>
    <string name="xyb">下一步</string>
    <string name="all">全部</string>
    <string name="please_input_jsdd">请输入目标接收地址</string>
    <string name="please_input_zzsl">请输入转账数量</string>
    <string name="please_input_gasprice">请输入 Gas Price</string>
    <string name="please_input_gaslimit">请输入 Gas Limit</string>
    <string name="gaslow">Gas 过低 请输入有效的 Gas</string>
    <string name="select_coin">选择币种</string>
    <string name="search_token_tip">币种名称或合约地址</string>
    <string name="ssjg">搜索结果</string>
    <string name="sk">收款</string>
    <string name="receipt_tip">请勿转入非%s资产</string>
    <string name="fx">分享</string>
    <string name="fz">复制</string>
    <string name="dbxq">代币详情</string>
    <string name="jbxx">基本信息</string>
    <string name="hydd">合约地址</string>
    <string name="gw">官网</string>
    <string name="dbqc">代币全称</string>
    <string name="fxxx">发行信息</string>
    <string name="dbzl">代币总量</string>
    <string name="fxsj">发行时间</string>
    <string name="copysuccess">复制成功</string>
    <string name="jyxq">交易详情</string>
    <string name="zzcg">转账成功</string>
    <string name="skcg">收款成功</string>
    <string name="zzsb">转账失败</string>
    <string name="sksb">收款失败</string>
    <string name="jyqrz">交易确认中</string>
    <string name="jyhash">交易哈希</string>
    <string name="qkgd">区块高度</string>
    <string name="sj">时间</string>
    <string name="qklckxq">区块链查看详情</string>
    <string name="dappopentip">本服务由%s提供服务</string>
    <string name="sx">刷新</string>
    <string name="fzlj">复制链接</string>
    <string name="llqdk">浏览器打开</string>
    <string name="jb">举报</string>
    <string name="qx">取消</string>
    <string name="qbdz">%s钱包地址</string>
    <string name="smxzapp">扫码下载App</string>
    <string name="more">更多</string>
    <string name="qhwl">切换网络</string>
    <string name="tjbz">添加币种</string>
    <string name="tjqb">添加钱包</string>
    <string name="cjqb">创建钱包</string>
    <string name="cjqb_tip">全新钱包，点击创建</string>
    <string name="cjsf">创建钱包</string>
    <string name="qbmc">钱包名称</string>
    <string name="qbmc_tip">请输入钱包名称</string>
    <string name="szjymm">设置交易密码</string>
    <string name="szjymm_tip">密码不少于8位,且包含数字和字母</string>
    <string name="zcsr">再次输入</string>
    <string name="lose_mm_tip">请妥善保管交易密码，一旦丢失，不可找回！</string>
    <string name="cjcg">创建成功</string>
    <string name="backupzjc_title">请勿截图、拍照</string>
    <string name="backuozjc_tip">请妥善保管助记词，且不要提供给任何人！</string>
    <string name="wylj">我已了解</string>
    <string name="bfqb">备份钱包</string>
    <string name="bfzjc_title">备份助记词</string>
    <string name="bfzjc_tip">请妥善保管助记词，拥有助记词等于拥有钱包的一切权力</string>
    <string name="bfzjc_tip_2">请按顺序抄写助记词并确保正确，请勿截图、拍照</string>
    <string name="bfzjc_tip_bottom_1">•  请勿将助记词提供给任何人。</string>
    <string name="bfzjc_tip_bottom_2">•  妥善保管助记词，以便未来恢复钱包使用。</string>
    <string name="bfzjc_tip_bottom_3">•  尚未备份助记词，请勿轻易删除APP。</string>
    <string name="wybfqyz">我已备份，现在验证</string>
    <string name="yzzjc_title">验证助记词</string>
    <string name="yzzjc_tip">请按您抄写的顺序点击填充，确保备份正确</string>
    <string name="please_input_right_zjc">请正确选择助记词</string>
    <string name="zjc_right">助记词正确</string>
    <string name="sydr">私钥导入</string>
    <string name="import_sy_hint">请输入明文私钥或扫二维码</string>
    <string name="lcmmbyz">两次密码不一致</string>
    <string name="zjcdr">助记词导入</string>
    <string name="import_zjc_hint">请输入助记词并以空格分开或扫二维码</string>
    <string name="gjms">高级模式</string>
    <string name="drcg">导入成功</string>
    <string name="szqblj">设置钱包路径</string>
    <string name="mr">默认</string>
    <string name="mr_way">m\/44\'\/60\'\/0\'\/0\/0</string>
    <string name="Ledger">Ledger</string>
    <string name="ledger_way">m\/44\'\/60\'\/0\'\/0</string>
    <string name="zdylj">自定义路径</string>
    <string name="zdylj_way">m\/44\'\/60\'\/1\'\/0\/0</string>
    <string name="wallet_setting">钱包设置</string>
    <string name="xgqbm">修改钱包名</string>
    <string name="xgqbm_tip">设置钱包名,更好管理钱包</string>
    <string name="xgmm">修改密码</string>
    <string name="sgmm_tip">支付 转账场景使用</string>
    <string name="bfzjc">备份助记词</string>
    <string name="bfzjc_tip_mana">助记词可恢复钱包</string>
    <string name="cksy">查看私钥</string>
    <string name="chsy_tip">钱包钥匙,导入、恢复钱包</string>
    <string name="scqb">删除钱包</string>
    <string name="jymm">交易密码</string>
    <string name="jymm_tip">请输入交易密码</string>
    <string name="confirm">确认</string>
    <string name="mcbnwk">名称不能为空</string>
    <string name="xgcg">修改成功</string>
    <string name="ymm">原密码</string>
    <string name="please_input_ymm">请输入原密码</string>
    <string name="mmcw_tip">原密码错误,请从新输入</string>
    <string name="dcsy">导出私钥</string>
    <string name="dcsy_tip">请妥善保管私钥，拥有私钥等于拥有钱包的一切权力</string>
    <string name="djcksy">点击查看私钥</string>
    <string name="dcsy_bottom_tip1">•  请勿将私钥提供给任何人。</string>
    <string name="dcsy_bottom_tip2">•  妥善保管私钥，以便未来恢复钱包使用。</string>
    <string name="setting">设置</string>
    <string name="morelanguage">多语言</string>
    <string name="cn">简体中文</string>
    <string name="jjdw">计价单位</string>
    <string name="hzld">红涨绿跌</string>
    <string name="jdsz">节点设置</string>
    <string name="save">保存</string>
    <string name="tjzdyjd">添加自定义节点</string>
    <string name="tjlxr">添加联系人</string>
    <string name="bj">编辑</string>
    <string name="wc">完成</string>
    <string name="bz">备注:</string>
    <string name="mc">名称</string>
    <string name="mc_hint">请输入名称</string>
    <string name="addnode_wallet_address">钱包地址</string>
    <string name="addnode_wallet_address_hint">输入或粘贴钱包地址</string>
    <string name="addnode_wallet_bz">备注（选填）</string>
    <string name="qtxbz">请填写备注</string>
    <string name="xzdzlx">选择地址类型</string>
    <string name="mm">密码</string>
    <string name="wsz">未设置</string>
    <string name="faceidsetting">Face ID解锁应用</string>
    <string name="faceidsetting_tip">开启前，请先前往手机系统设置</string>
    <string name="sryysmm">请输入应用锁密码</string>
    <string name="yysmm_tip">设置密码，仅限数字</string>
    <string name="mmcw">密码错误</string>
    <string name="lockappmm_input_again">再次输入，两次密码须一致</string>
    <string name="tjzdjwl">添加自定义网络</string>
    <string name="tjwl_tip">菜鸟钱包无法验证自定网络的安全性，请务必添加可信任的自定义网络。</string>
    <string name="wlmc">网络名称</string>
    <string name="wlmc_tip">请输入网络名称</string>
    <string name="xzrpcurl">新增PRC URL</string>
    <string name="xzrpcurl_tip">请输入新的RPC地址</string>
    <string name="chainid">链ID</string>
    <string name="chainid_tip">请输入链ID</string>
    <string name="dbfh">代币符号(选填)</string>
    <string name="qkllq">区块浏览器(选填)</string>
    <string name="bc">保存</string>
    <string name="xt">选填</string>
    <string name="qsuwlmc">请输入网络名称</string>
    <string name="qsrrpcdz">请输入RPC地址</string>
    <string name="qsrchainid">请输入ChainId</string>
    <string name="ytjdsyzc">已添加至首页资产</string>
    <string name="ysc">已删除</string>
    <string name="hq">行情</string>
    <string name="tjzx">添加自选成功</string>
    <string name="qxzx">取消自选成功</string>
    <string name="sjdz">添加联系人</string>
    <string name="dzxxbnwk">地址信息不能为空</string>
    <string name="wxddz">无效的%s钱包地址</string>
    <string name="bccg">保存成功</string>
    <string name="dzycz">地址已存在</string>
    <string name="cj">创建</string>
    <string name="zx">自选</string>
    <string name="zlb">主流币</string>
    <string name="defi">DeFi</string>
    <string name="nft">NFT</string>
    <string name="bncftj">不能重复添加</string>
    <string name="tjdapp">推荐DAPP</string>
    <string name="ssjl">搜索记录</string>
    <string name="tjbz_1">推荐币种</string>
    <string name="coin">币种</string>
    <string name="smddfwz">扫描内容非网页地址</string>
    <string name="sqsl">授权数量</string>
    <string name="sqdbhydz">授权代币合约地址</string>
    <string name="fkdz">付款地址</string>
    <string name="jsdz">接收地址</string>
    <string name="wxz">无限制</string>
    <string name="szzdsqsl">设置最大授权数量</string>
    <string name="srsl">输入数量</string>
    <string name="zfsl">支付数量</string>
    <string name="zfxx">支付信息</string>
    <string name="qqsq">请求授权</string>
    <string name="qqqm">请求签名</string>
    <string name="qrxx">确认信息</string>
    <string name="xgkgf">修改旷工费</string>
    <string name="mmjsyy">使用密码解锁应用</string>
    <string name="mmjsyy_tip">应用每次从后台切换到前台,都将需输入密码</string>
    <string name="jyzwyz">交易指纹验证</string>
    <string name="jyzwyz_tip">提交交易时,将使用手机指纹验证</string>
    <string name="xg">修改</string>
    <string name="ndsbbzczw">您的设备不支持指纹</string>
    <string name="systemnofingerdata">请在系统录入指纹后再验证</string>
    <string name="zwyz">指纹验证</string>
    <string name="qaxzw">请按下指纹</string>
    <string name="szcg">设置成功</string>
    <string name="yzsb">验证失败</string>
    <string name="nqxlsb">您取消了识别</string>
    <string name="zwsjfsbh">指纹数据发生变化</string>
    <string name="qxszmm">请先设置密码</string>
    <string name="qcmzwgyq">请触摸指纹传感器</string>
    <string name="yymm">应用密码</string>
    <string name="gb">关闭</string>
    <string name="closefinger_tip">确认关闭指纹验证吗？</string>
    <string name="dlzcqb">多链数字资产钱包</string>
    <string name="qb">钱包</string>
    <string name="shichang">市场</string>
    <string name="llq">浏览器</string>
    <string name="gd">更多</string>
    <string name="cjqb_add_wallet_type_tip">请添加身份钱包下的币种 (多选) </string>
    <string name="sfmbnwk">身份名不能为空</string>
    <string name="qsr1_12weisfm">请输入1-12位的身份名</string>
    <string name="password_chexk_error">密码不少于8位，且包含数字和字母</string>
    <string name="input_two_time_no_same">两次输入的密码不一致</string>
    <string name="input_16jz_64wei_privatekey">请输入 16 进制 64 位私钥</string>
    <string name="zjc_f12ge">输入的助记词非12个单词</string>
    <string name="dzgsbzq">地址格式不正确</string>
</resources>