<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.ModifyWalletNameActivity">

    <xc.common.viewlib.view.customview.TitleLayout
        android:id="@+id/wim_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.fanrong.frwallet.view.SuperEditText
        android:id="@+id/set_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topLeftTextContent="@string/qbmc"
        app:bottomRightTextContent=""
        app:topRightTextContent=""
        app:edittext_hint="@string/qbmc_tip"
        app:edittextisdisable="false"
        android:layout_marginTop="20dp"/>

    <com.fanrong.frwallet.view.CommonButton
        android:id="@+id/cb_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:btnText="@string/confirm"
        app:isCanUse="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"/>

</LinearLayout>