<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_top_coner12"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:src="@mipmap/dialog_close" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/dialog_title"
            android:text="@string/zwyz"
            android:layout_alignParentLeft="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/src_lib_eui_icon_fingerprint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qaxzw"
            android:textSize="21sp"
            android:textColor="@color/dialog_content"
            android:textStyle="bold"
            android:id="@+id/tv_tip_1"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qcmzwgyq"
            android:id="@+id/tv_tip_2"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/bg_transparent_kuang"
            android:text="@string/qx"
            android:textStyle="bold"
            android:textColor="@color/dialog_content"
            android:textSize="16sp"
            android:id="@+id/tv_cancel"/>

    </LinearLayout>

</LinearLayout>