<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.backup.BackupWordsShowActivity">


    <xc.common.viewlib.view.customview.TitleLayout
        android:id="@+id/ac_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bfzjc_title"
            android:textColor="@color/dialog_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/bfzjc_tip"
            android:textColor="@color/text_hint"
            android:textSize="12sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bfzjc_tip_2"
            android:textColor="@color/main_blue"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="240dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/backup_item_words"
                android:background="@drawable/bg_wallet_item"
                android:padding="20dp"/>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                app:flexDirection="row"
                app:justifyContent="space_evenly"
                android:layout_height="match_parent" >

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#00000000"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#00000000"/>

            </com.google.android.flexbox.FlexboxLayout>


            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                app:flexDirection="column"
                app:justifyContent="space_evenly"
                android:layout_height="match_parent" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#00000000"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#00000000"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#00000000"/>

            </com.google.android.flexbox.FlexboxLayout>

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bfzjc_tip_bottom_1"
            android:textSize="13sp"
            android:singleLine="false"
            android:textColor="@color/text_hint"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bfzjc_tip_bottom_2"
            android:textSize="13sp"
            android:singleLine="false"
            android:textColor="@color/text_hint"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bfzjc_tip_bottom_3"
            android:textSize="13sp"
            android:singleLine="false"
            android:textColor="@color/text_hint"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/common_Btn_Style"
            android:layout_marginBottom="20dp"
            android:text="@string/wybfqyz"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
    </LinearLayout>


</LinearLayout>