<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_top_coner12"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:src="@mipmap/dialog_close" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/dialog_title"
            android:text="@string/gb"
            android:layout_alignParentLeft="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yymm"
        android:layout_gravity="left"
        android:textSize="14sp"
        android:textColor="@color/text_title"
        android:layout_marginTop="40dp"/>

    <com.fanrong.frwallet.view.VerificationCodeView
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:id="@+id/vfcv"

        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textStyle="bold"
        style="@style/common_Btn_Style"
        android:textSize="16sp" />
</LinearLayout>