<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_top_coner12"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:src="@mipmap/dialog_close" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/dialog_title"
            android:text="@string/szzdsqsl"
            android:layout_alignParentLeft="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_input"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bv_transparent"
            android:gravity="center_vertical"
            android:hint="@string/srsl"
            android:paddingLeft="10sp"
            android:textColorHint="@color/text_title"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/dialog_content"
            android:textSize="15sp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textStyle="bold"
        style="@style/common_Btn_Style"
        android:textSize="16sp" />


</LinearLayout>