<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_topleft_topright_circle"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/dialog_close"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_below="@+id/iv_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:id="@+id/ll_content"
        android:layout_marginTop="10dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/src_lib_eui_icon_screenshotban" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/backupzjc_title"
            android:textColor="#000"
            android:textSize="21sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/text_title"
            android:text="@string/backuozjc_tip"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_know"
        android:layout_below="@+id/ll_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_solid"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="40dp"
        android:text="@string/wylj"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>